--- a/config/home/tmux.conf
+++ b/config/home/tmux.conf
@@ -1,4 +1,11 @@
 set -g mouse on
+
+# Plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'sainnhe/tmux-fzf'
+
+# tmux-fzf settings
+set -g @tmux-fzf-launch-key 'f'  # prefix + f
 
 run '~/.tmux/plugins/tpm/tpm'
+
