feat: adds tmux statusbar

--- a/config/home/tmux.conf
+++ b/config/home/tmux.conf
@@ -1,4 +1,14 @@
 set -g mouse on
+bind -n MouseDown1StatusRight display-popup -E -w 80% -h 80% "top"
+
+# Status bar
+set -g status-left "[#S] #W (#{session_windows}) "
+set -g status-left-length 40
+set -g window-status-format ""
+set -g window-status-current-format ""
+set -g status-right "#(zsh -ic 'tmux_status_right' 2>/dev/null) "
+set -g status-right-length 50
+set -g status-interval 5
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
